--- a/index.html
+++ b/index.html
@@ -77,49 +77,38 @@
  
  <section id="brands">
   <h2>Top Insurance Brands</h2>
-  <div class="brands">
+  <div class="brands brand-grid">
     <div class="brand-card" onclick="openForm('LIC')">
-      <img src="images/lic logo.jpg" alt="LIC Logo" />
+      <img src="images/lic logo.jpg" alt="LIC Logo" class="brand-logo" />
       <p>LIC - Life Insurance Corporation</p>
     </div>
-
     <div class="brand-card" onclick="openForm('Tata AIA')">
-      <img src="images/TATA AIA.jpeg" alt="Tata AIA Logo" />
+      <img src="images/TATA AIA.jpeg" alt="Tata AIA Logo" class="brand-logo" />
       <p>Tata AIA Life Insurance</p>
     </div>
-
     <div class="brand-card" onclick="openForm('HDFC Life')">
-      <img src="images/HDFC.jpeg" alt="HDFC Life Logo" />
+      <img src="images/HDFC.jpeg" alt="HDFC Life Logo" class="brand-logo" />
       <p>HDFC Life Insurance</p>
     </div>
-
     <div class="brand-card" onclick="openForm('ICICI Prudential')">
-      <img src="images/icici.jpeg" alt="ICICI Prudential Logo" />
+      <img src="images/icici.jpeg" alt="ICICI Prudential Logo" class="brand-logo" />
       <p>ICICI Prudential Life</p>
     </div>
-
     <div class="brand-card" onclick="openForm('TATA AIG')">
-      <img src="images/TATA AIG.png" alt="TATA AIG Logo" />
+      <img src="images/TATA AIG.png" alt="TATA AIG Logo" class="brand-logo" />
       <p>TATA AIG General Insurance</p>
     </div>
-
     <div class="brand-card" onclick="openForm('Oriental Insurance')">
-  <img src="images/images.jpeg" alt="Oriental Insurance Logo" />
-  <p>Oriental Insurance</p>
-</div>
-
-    <!-- Reliance General -->
-<div class="brand-card" onclick="openForm('Aditya Birla')">
-  <img src="images/Aditya Birla.jpeg" alt="Aditya Birla logo" />
-  <p>Aditya Birla Health Insurance</p>
-</div>
-
-<!-- Niva Bupa -->
-<div class="brand-card" onclick="openForm('Niva Bupa')">
-  <img src="images/download.png" alt="Niva Bupa Logo" />
-  <p>Niva Bupa Health Insurance</p>
-</div>
-
+      <img src="images/images.jpeg" alt="Oriental Insurance Logo" class="brand-logo" />
+      <p>Oriental Insurance</p>
+    </div>
+    <div class="brand-card" onclick="openForm('Aditya Birla')">
+      <img src="images/Aditya Birla.jpeg" alt="Aditya Birla logo" class="brand-logo" />
+      <p>Aditya Birla Health Insurance</p>
+    </div>
+    <div class="brand-card" onclick="openForm('Niva Bupa')">
+      <img src="images/download.png" alt="Niva Bupa Logo" class="brand-logo" />
+      <p>Niva Bupa Health Insurance</p>
     </div>
   </div>
 </section>
