--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
   <h2>Contact Us</h2>
   <form id="quoteForm">
     <input type="text" name="name" placeholder="Your Name" required />
-    <input type="tel" name="phone" placeholder="Phone Number" required maxlength="10" pattern="[0-9]{10}" inputmode="numeric" />
-    <input type="tel" name="contact" placeholder="WhatsApp Number" required maxlength="10" pattern="[0-9]{10}" inputmode="numeric" />
+    <input type="tel" name="phone" placeholder="Phone Number (10 digits)" required maxlength="10" pattern="[0-9]{10}" inputmode="numeric" oninput="this.value=this.value.replace(/[^0-9]/g,'')" />
+    <input type="tel" name="contact" placeholder="WhatsApp Number (10 digits)" required maxlength="10" pattern="[0-9]{10}" inputmode="numeric" oninput="this.value=this.value.replace(/[^0-9]/g,'')" />
     <input type="email" name="email" placeholder="Email (optional)" />
     
     <select id="insuranceType" name="insuranceType" required onchange="filterCompanies()">
@@ -171,9 +171,9 @@
    <form id="brandInquiryForm">
   <input type="text" id="brandNameInput" placeholder="Brand Name" readonly />
   <input type="text" id="userName" placeholder="Your Name" required />
-  <input type="tel" id="userPhone" placeholder="Phone Number" required maxlength="10" pattern="[0-9]{10}" inputmode="numeric" />
+  <input type="tel" id="userPhone" placeholder="Phone Number (10 digits)" required maxlength="10" pattern="[0-9]{10}" inputmode="numeric" oninput="this.value=this.value.replace(/[^0-9]/g,'')" />
   <input type="email" id="userEmail" placeholder="Email (optional)" />
-  <textarea id="userQuery" placeholder="Your Query" required maxlength="150"></textarea>
+  <textarea id="userQuery" placeholder="Your Query (max 150 characters)" required maxlength="150"></textarea>
   <button type="submit">Submit</button>
   <p id="popupMessage"></p>
 </form>
@@ -191,8 +191,8 @@
         <option value="">Select Insurance Company</option>
       </select>
       <input type="text" id="serviceUserName" placeholder="Your Name" required />
-      <input type="tel" id="serviceUserPhone" placeholder="Phone Number" required maxlength="10" pattern="[0-9]{10}" inputmode="numeric" />
-      <textarea id="serviceUserQuery" placeholder="Your Query" required maxlength="150"></textarea>
+      <input type="tel" id="serviceUserPhone" placeholder="Phone Number (10 digits)" required maxlength="10" pattern="[0-9]{10}" inputmode="numeric" oninput="this.value=this.value.replace(/[^0-9]/g,'')" />
+      <textarea id="serviceUserQuery" placeholder="Your Query (max 150 characters)" required maxlength="150"></textarea>
       <button type="submit">Submit</button>
       <p id="serviceFormMsg"></p>
        </form>
