--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <a href="#contact" class="btn">Get a Free Quote</a>
 </section>
 
-<section id="about" data-aos="fade-up">
+<section id="about" data-aos="fade-up" style="scroll-margin-top:220px;">
   <h2>About Us</h2>
   <p>We are Gujarat’s trusted agency for LIC, HDFC Life, Tata AIA, ICICI, SBI Life, and more.</p>
 </section>
@@ -64,7 +64,7 @@
   </ul>
 </section>
 
-<section id="services" data-aos="fade-up">
+<section id="services" data-aos="fade-up" style="scroll-margin-top:220px;">
   <h2>Our Services</h2>
   <ul class="services-list">
     <li onclick="openServiceForm('Life Insurance')">🛡️ Life Insurance</li>
