--- a/index.html
+++ b/index.html
@@ -24,16 +24,14 @@
   <div>PREYASH INSURANCE</div>
 </div>
 
-<header>
-  <header>
-    <img src="images/LogoDP.png" alt="Logo" height="200" />
-  <header>
-  <div style="display: flex; align-items: center; justify-content: center; gap: 10px;">
-    <h1>PREYASH INSURANCE SERVICES</h1>
+
+<header style="background: linear-gradient(to right, #004080, #007bff); color: white; padding: 1rem 0; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.2); position: sticky; top: 0; z-index: 100;">
+  <div style="display: flex; align-items: center; justify-content: center; gap: 18px; max-width: 1100px; margin: 0 auto;">
+    <img src="images/LogoDP.png" alt="Logo" height="60" id="logoDP" style="margin-right: 0; transition: transform 0.7s cubic-bezier(.68,-0.55,.27,1.55);" />
+    <h1 style="margin: 0; font-size: 2.1rem; font-weight: bold; letter-spacing: 1px;">PREYASH INSURANCE SERVICES</h1>
   </div>
   <nav>
-
-    <ul>
+    <ul style="list-style: none; display: flex; justify-content: center; gap: 20px; margin-top: 10px; padding: 0;">
       <li><a href="#about">About Us</a></li>
       <li><a href="#services">Our Services</a></li>
       <li><a href="#brands">Top Brands</a></li>
@@ -41,6 +39,16 @@
     </ul>
   </nav>
 </header>
+<script>
+// Animate logo sliding in from left on page load
+window.addEventListener('DOMContentLoaded', function() {
+  var logo = document.getElementById('logoDP');
+  logo.style.transform = 'translateX(-80px) scale(0.7)';
+  setTimeout(function() {
+    logo.style.transform = 'translateX(0) scale(1)';
+  }, 100);
+});
+</script>
 
 <div style="height: 5vh;"></div>
 
