--- a/index.html
+++ b/index.html
@@ -61,11 +61,13 @@ window.addEventListener('DOMContentLoaded', function() {
 <section id="about" data-aos="fade-up" style="scroll-margin-top:220px;">
   <h2>About Us</h2>
   <p>We are Gujarat’s trusted agency for LIC, HDFC Life, Tata AIA, ICICI, SBI Life, and more.</p>
+  <p>Hi, I am DHARMESH PANCHAL. I’ve been in the Indian insurance industry for more than 15 years. I can help you compare and buy the best insurance from India’s top insurance providers. We also Hiring Insurance Adviser for Multy Brand Multiple Product Sell</p>
 </section>
 
 <section id="whyus" data-aos="fade-up">
   <h2 style="color: #ffea00; font-weight: bold; letter-spacing: 1px; text-shadow: 1px 1px 4px #333;">Why Choose PREYASH INSURANCE ?</h2>
   <ul>
+    <li><span><strong>15+ Years of Experience</strong></span></li>
     <li>Compare <strong>15+ Top Brands</strong></li>
     <li><strong>Quick Claim Support</strong></li>
     <li>Trusted by <strong><span id="clientCount">0</span>+ Clients</strong></li>
