Profile Section Added

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   </div>
   <nav>
     <ul style="list-style: none; display: flex; justify-content: center; gap: 20px; margin-top: 10px; padding: 0;">
+      <li><a href="#profile">Profile</a></li>
       <li><a href="#about">About Us</a></li>
       <li><a href="#services">Our Services</a></li>
       <li><a href="#brands">Top Brands</a></li>
@@ -200,6 +201,33 @@ window.addEventListener('DOMContentLoaded', function() {
   <h2>Your Trusted Multi-Brand Insurance Partner</h2>
   <p>We help you compare and choose the best insurance from top providers.</p>
   <a href="#contact" class="btn">Get a Free Quote</a>
+</section>
+
+
+
+<!-- ===== Profile Section (Modern Card Layout) ===== -->
+<section id="profile" data-aos="fade-up" style="scroll-margin-top:180px; margin: 0 auto 36px auto; max-width: 700px;">
+  <h2 style="color: #004080; font-size: 1.45rem; font-weight: bold; margin-bottom: 18px; letter-spacing: 1px; text-align: center;">Profile</h2>
+  <div class="profile-card">
+    <div class="profile-info">
+      <h3 class="profile-name">Dharmesh Panchal</h3>
+      <div class="profile-row">
+        <a href="tel:9722574788" class="profile-icon" title="Call"><img src="images/phone.svg" alt="Phone" /></a>
+        <span>9722574788</span>
+      </div>
+      <div class="profile-row">
+        <a href="mailto:dpinsurance2133@gmail.com" class="profile-icon" title="Email"><img src="images/email.svg" alt="Email" /></a>
+        <span>dpinsurance2133@gmail.com</span>
+      </div>
+      <div class="profile-row">
+        <a href="https://wa.me/919722574788" class="profile-icon" title="WhatsApp" target="_blank"><img src="images/WhatsApp-icon.png" alt="WhatsApp" style="width: 26px; height: 26px;" /></a>
+        <span>Chat on WhatsApp</span>
+      </div>
+    </div>
+    <div class="profile-photo">
+      <img src="images/Photo.png" alt="Dharmesh Panchal" />
+    </div>
+  </div>
 </section>
 
 <section id="about" data-aos="fade-up" style="scroll-margin-top:220px;">
