--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ window.addEventListener('DOMContentLoaded', function() {
 
 <!-- ===== Profile Section (Modern Card Layout) ===== -->
 <section id="profile" data-aos="fade-up" style="scroll-margin-top:180px; margin: 0 auto 36px auto; max-width: 700px;">
-  <h2 style="color: #004080; font-size: 1.45rem; font-weight: bold; margin-bottom: 18px; letter-spacing: 1px; text-align: center;">Profile</h2>
+  <h2 style="color: #004080; font-size: 2.50rem; font-weight: bold; margin-bottom: 18px; letter-spacing: 1px; text-align: center;">Profile</h2>
   <div class="profile-card">
     <div class="profile-info">
       <h3 class="profile-name">Dharmesh Panchal</h3>
@@ -222,6 +222,18 @@ window.addEventListener('DOMContentLoaded', function() {
       <div class="profile-row">
         <a href="https://wa.me/919722574788" class="profile-icon" title="WhatsApp" target="_blank"><img src="images/WhatsApp-icon.png" alt="WhatsApp" style="width: 26px; height: 26px;" /></a>
         <span>Chat on WhatsApp</span>
+      </div>
+      <div class="profile-row">
+        <a href="https://www.facebook.com/share/16nn9kcGJ1/" class="profile-icon" title="Facebook" target="_blank"><img src="images/facebook-color.svg" alt="Facebook" style="width: 28px; height: 28px;" /></a>
+        <span>Facebook: <span style="color:#1877F3; font-weight:500;">/insurance_by_dharmesh</span></span>
+      </div>
+      <div class="profile-row">
+        <a href="https://www.instagram.com/insurance_by_dharmesh/profilecard/?igsh=MTg1a29pazVyeHgyNg==" class="profile-icon" title="Instagram" target="_blank"><img src="images/instagram-color.svg" alt="Instagram" style="width: 28px; height: 28px;" /></a>
+        <span>Instagram: <span style="color:#E4405F; font-weight:500;">@insurance_by_dharmesh</span></span>
+      </div>
+      <div class="profile-row">
+        <a href="https://www.linkedin.com/in/dharmesh-panchal-09722574788?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="profile-icon" title="LinkedIn" target="_blank"><img src="images/linkedin-color.svg" alt="LinkedIn" style="width: 28px; height: 28px;" /></a>
+        <span>LinkedIn: <span style="color:#0A66C2; font-weight:500;">/dharmesh-panchal-09722574788</span></span>
       </div>
     </div>
     <div class="profile-photo">
